@startuml
' Diagrama de clases del sistema de plugins (host)
skinparam classAttributeIconSize 0

package "Host (retro-editor)" {
  class MainApp {
    +start(Stage)
    +main(String[])
  }

  class PluginManager {
    -pluginsDir: File
    -propsFile: File
    -props: Properties
    -loaded: List<Plugin>
    -pluginLoaders: Map<Plugin, ClassLoader>
    -pluginContexts: Map<Plugin, PluginContext>
    +loadPlugins(): void
    +enablePlugins(): void
    +disablePlugins(): void
    +reloadPlugins(): void
    +discoverPlugins(): List<PluginInfo>
  }

  interface Plugin {
    +onLoad(ctx: PluginContext): void
    +onEnable(): void
    +onDisable(): void
    +getName(): String
  }

  interface PluginContext {
    +getPrimaryStage(): Stage
    +getScene(): Scene
    +getMenuBar(): MenuBar
    +log(message: String): void
    +registerMenu(menu: Menu): void
    +unregisterMenu(menu: Menu): void
    +unregisterAll(): void
  }

  class PluginContextImpl {
    -stage: Stage
    -scene: Scene
    -menuBar: MenuBar
    -registeredMenus: List<Menu>
    +getPrimaryStage(): Stage
    +getScene(): Scene
    +getMenuBar(): MenuBar
    +log(message: String): void
    +registerMenu(menu: Menu): void
    +unregisterMenu(menu: Menu): void
    +unregisterAll(): void
  }

  class PluginInfo {
    +jarName: String
    +enabled: boolean
    +implNames: List<String>
  }

  class AppLogger {
    +logMonitor(category: String, message: String): void
  }

  class ChildFirstClassLoader {
    +ChildFirstClassLoader(URL[] urls, ClassLoader parent)
    +loadClass(name: String, resolve: boolean): Class
  }
}

package "Plugins (runtime JARs)" {
  class PluginJar <<artifact>> {
    +serviceDescriptor: META-INF/services/com.retroeditor.plugin.Plugin
    +implClass: com.example.MyPlugin
    +resources: views/*.fxml (optional)
  }

  class PluginImpl {
    +onLoad(ctx: PluginContext)
    +onEnable()
    +onDisable()
    +getName(): String
  }
}

PluginManager --> PluginContextImpl : creates
PluginManager --> ChildFirstClassLoader : uses
PluginManager --> PluginInfo : returns
PluginManager --> AppLogger : logs via
PluginImpl ..|> Plugin
PluginContextImpl ..|> PluginContext
PluginJar --> PluginImpl : contains
PluginManager ..> PluginImpl : loads/instantiates

@enduml
